# libusb

./: .buildinfo  .gitattributes  .readthedocs.yml  CHANGES.html  CHANGES.rst  LICENSE  MANIFEST.in  README.html  README.rst  genindex.html  index.html  noxfile.py  objects.inv  output.json  output.txt  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
#arch/: .update.py  _notes_.txt  libusb-1.0.29.7z.dsc.txt  libusb-1.0.29.zip.dsc.txt  libusb-1.0.30-rc1.7z.dsc.txt  libusb-1.0.30-rc1.zip.dsc.txt  libusb-1.0.30-rc2.7z.dsc.txt  libusb-1.0.30-rc2.zip.dsc.txt
.doctrees/: CHANGES.doctree  README.doctree  environment.pickle  index.doctree
_sources/: index.rst.txt
_static/: bizstyle.js  documentation_options.js
arch/: libusb-1.0.21.zip.dsc.txt  libusb-1.0.22.7z.dsc.txt  libusb-1.0.22.zip.dsc.txt  libusb-1.0.23.7z  libusb-1.0.23.7z.dsc.txt  libusb-1.0.23.zip.dsc.txt
docs/: conf.py  index.rst  make.bat
examples/: dpfp.py  dpfp.py_  dpfp_threaded.py  dpfp_threaded.py_  ezusb.py  ezusb.py_  fxload.py  fxload.py_  hotplugtest.py  listdevs.py  sam3u_benchmark.py  testlibusb.py  win32.py  xusb.py  xusb.py_
examples/examples.c/: Makefile.in  dpfp.c  dpfp_threaded.c  ezusb.c  fxload.c  hotplugtest.c  listdevs.c  sam3u_benchmark.c  testlibusb.c  xusb.c
libusb/: __about__.py  __init__.py  _libusb.py
libusb/_platform/: __init__.py
libusb/_platform/_osx/: __init__.py
libusb/_platform/_windows/: __init__.py
src/libusb/: __about__.py  __config__.py  __init__.py  _config.py  _dll.py  _libusb.py  _util.py  libusb.cfg
src/libusb/_platform/: __init__.py
src/libusb/_platform/_linux/: __init__.py
src/libusb/_platform/_linux/x86/: libusb-1.0.so.0.3.0
src/libusb/_platform/_macos/: __init__.py
src/libusb/_platform/_macos/x64/10.7/: libusb-1.0.0.dylib
src/libusb/_platform/_osx/: __init__.py
src/libusb/_platform/_osx/x64/: libusb-1.0.dylib
src/libusb/_platform/_windows/: __init__.py  _win32.py
src/libusb/_platform/linux/: __init__.py
src/libusb/_platform/macos/: __init__.py
src/libusb/_platform/macos/arm64/: libusb-1.0.dylib
src/libusb/_platform/macos/x86_64/: libusb-1.0.dylib
src/libusb/_platform/windows/: __init__.py
tests/: __init__.py  __main__.py  _win32.py  stress.py  test_main.py  testlib.py  tman_init_context.py  tman_macos.py  tman_set_option.py  tman_stress.py  tman_stress_mt.py  tman_umockdev.py_  umockdev.py_  usbdevice_fs.py  win32.py
tests/fuzz/: fuzz_bos_descriptor.py
tests/tests.c/: libusb_testlib.h  stress.c  testlib.c  usbdevice_fs.h.dsc.txt
