# Copyright (c) 2016 Adam Karpierz
# SPDX-License-Identifier: Zlib

[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=81.0.0", "packaging>=26.0.0" ]

[project]
name = "libusb"
version = "1.0.30rc1"
description = "Python binding for the libusb C library."
keywords = [ "usb", "libusb" ]
license = "Zlib"
license-files = [ "LICENSE" ]
authors = [
  { name  = "Adam Karpierz", email = "adam@karpierz.net" },
]
maintainers = [
  { name  = "Adam Karpierz", email = "adam@karpierz.net" },
]
urls.Homepage      = "https://pypi.org/project/libusb/"
urls.Documentation = "https://karpierz.github.io/libusb/"
urls.History       = "https://karpierz.github.io/libusb/CHANGES.html"
urls.Download      = "https://pypi.org/project/libusb/"
urls.Repository    = "https://github.com/karpierz/libusb"
urls.Tracker       = "https://github.com/karpierz/libusb/issues"
urls.Sponsoring    = "https://www.paypal.com/donate/?hosted_button_id=FX8L7CJUGLW7S"
requires-python = ">=3.10.0,<4.0.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: Polish",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dynamic = [ "readme" ]
# scripts.libusb = "libusb.__main__:main"
# gui-scripts.libusb-gui = "libusb:main_gui"
# entry-points.libusb.magical.epoint = "libusb:main_epoint"
dependencies = [
  # mandatory
  "typing-extensions>=4.15.0",
  "pkg-about>=2.3.0",
  # others
  "py-utlx>=2.3.0",
]

[dependency-groups]
base = [
  "pip>=26.0.1",
  "setuptools>=81.0.0",
]
test = [
  { include-group = "base" },
  "deepdiff>=9.0.0",
  "rich>=14.3.3",
  "ioctl-opt>=1.3.1",
]
coverage = [
  { include-group = "test" },
  "coverage>=7.13.5",
  "covdefaults>=2.3.0",
  "diff-cover>=10.2.0",
]
docs = [
  { include-group = "base" },
  "sphinx>=8.1.3",
  "pygments_ansi_color>=0.3.0", # fix sphinx load error
  "roman_numerals>=4.1.0",      #         -||-
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-toolbox>=4.1.2",
  "sphinx-tabs>=3.4.5", # Do not change - sphinx-toolbox requires <3.4.7
  "sphinx-copybutton>=0.5.2",
  "sphinxcontrib-spelling>=8.0.2",
  "sphinx-lint>=1.0.2",
  "restructuredtext-lint>=2.0.2",
  "nbsphinx>=0.9.8",
]
build = [
  { include-group = "test" },
  "check-manifest>=0.51",
  "build>=1.4.2",
  "twine>=6.2.0",
]
publish = [
  "twine>=6.2.0",
]
type = [
  { include-group = "base" },
  "mypy>=1.19.1",
  "mypy_extensions>=1.1.0",
  "types-setuptools>=81.0.0.20260209",
]
lint = [
  { include-group = "test" },
  "flake8>=7.3.0",
  "flake8-in-file-ignores>=0.3.0",
  "flake8-pyproject>=1.2.4",
  "flake8-docstrings>=1.7.0",
  "pep8-naming>=0.15.1",
  "flake8-builtins>=3.1.0",
  "flake8-deprecated>=2.3.0",
]

[tool.setuptools]
dynamic.readme = { file = [ "README.rst" ], content-type = "text/x-rst; charset=UTF-8" }
include-package-data = true
platforms = [ "any" ]
zip-safe = false
packages.find.namespaces = false
packages.find.where = [ "src" ]
package-dir."" = "src"
# package-dir."libusb.tests" = "tests"
package-data.libusb = [
  "libusb.cfg",
]
package-data."libusb._platform" = [
  "*/*/*.dll",
  "*/*/*.so",
  "*/*/*.dylib",
  "*/*/.keep",
  "*/*/*/*.dylib",
  "*/*/*/.keep",
]
exclude-package-data."*" = [
  "*.c",   "*.h",
  "*.cpp", "*.hpp",
  "*.cxx", "*.hxx",
  "*.pyx", "*.pxd",
]
exclude-package-data.libusb = [
]

[tool.coverage]
# run
run.source = [
  "libusb",
  "tests",
]
run.omit = [
  "**/_platform/linux/*",
  "**/_platform/macos/*",
  "**/tests/tman_*.py",
]
run.branch = true
run.plugins = [ "covdefaults" ]
# report
report.exclude_also = [
  # Regexes
  # Have to re-enable the standard pragma
  '^\s*if\s+self\.debug\s*:',
  '^\s*if\s+__debug__\s*:',
  '^\s*if\s+(0|False|None)\s*:',
  '''if\s+__name__.*\s*==\s*['"]__main__['"]\s*:''',
  '^\s*@unittest\.skip\s*\(',
  '''^\s*@unittest\.skipIf\s*\(\s*sys\.platform\.startswith\s*\(\s*['"]win['"]\s*\)''',
  '^\s*@unittest\.skipIf\s*\(\s*is_windows\s*,',
  '^\s*@unittest\.skipIf\s*\(\s*is_cpython\s*,',
  '\s*if\s+typing\.TYPE_CHECKING\s*:',
]
report.omit = [
  "tests/run.py",
]
report.skip_covered = false

[tool.flake8]
filename = [ "*.py", "*.pyx" ]
# include = [ "tests" ]
# exclude = [ ".nox", ".tox", "*.egg", ".git", "__pycache__",
#             "build", "_build", "docs/_build", "dist" ]
exclude = [ "_vendor" ]
max-line-length = 99
ignore = [
  # pycodestyle error and warning codes
  "E126", # Continuation line over-indented for hanging indent
  "E203", # Whitespace before ",", ";", or ":"
  "E221", # Multiple spaces before operator
  "E251", # Unexpected spaces around keyword / parameter equals
  "E302", # Expected 2 blank lines, found 0
  "E701", # Multiple statements on one line (colon)
  "E702", # Multiple statements on one line (semicolon)
  "E731", # Do not assign a lambda expression, use a def
  "E122", # Continuation line missing indentation or outdented
  "E127", # Continuation line over-indented for visual indent
  "E128", # Continuation line under-indented for visual indent
  "E222", # Multiple spaces after operator
  "E272", # Multiple spaces before keyword
  "E241", # Multiple spaces after ","
  "E266", # Too many leading "#" for block comment
  "E226", # Missing whitespace around arithmetic operator
  "W503", # Line break occurred before a binary operator
  # pydocstyle error and warning codes
  "D100", # Missing docstring in public module
  "D101", # Missing docstring in public class
  "D102", # Missing docstring in public method
  "D103", # Missing docstring in public function
  "D104", # Missing docstring in public package
  "D202", # No blank lines allowed after function docstring
  "D400", # First line should end with a period
  "D401", # First line should be in imperative mood; try rephrasing
  # pep8-naming  error and warning codes
  "N801", # Class names should use CapWords convention (class names)
  "N802", # Function name should be lowercase (function names)
  "N803", # Argument name should be lowercase (function arguments)
  "N806", # Variable in function should be lowercase
  # Other error and warning codes
  "I100", # Your import statements are in the wrong order
]
# (e.g. "E4", "W") default: "E121", "E123", "126", "226", "E24", "704"
# select = [ "E", "W", "F", "N", "I" ]
# show-source = true
# verbose = false
# quiet = true
count = true

[tool.mypy]
python_version = "3.10"
strict = true
sqlite_cache = true
warn_unused_configs = true
exclude_gitignore = true
install_types = true
non_interactive = true
pretty = true
check_untyped_defs = true
# ignore_missing_imports = true
files = [ "src" ]
# exclude = [ "docs/", "tests/" ]
