[metadata]
#provides = libusb
platforms = any
keywords  = libusb
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: zlib/libpng License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: Jython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = libusb
include_package_data = True
zip_safe = True

[bdist_wheel]
universal = 1

[pep8]
filename = *.py,*.pyx
exclude  = docs,tests
max-line-length = 99
ignore   = E126,E203,E221,E251,E302,E701,E702,E731

[coverage:run]
data_file = .cover/.coverage

[coverage:report]
exclude_lines =
    # Regexes
    # Have to re-enable the standard pragma
    pragma: no cover
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    @unittest.skip\(
omit =
    libusb/_platform/
skip_covered = True

[coverage:html]
directory = .cover
