[metadata]
platforms = any
keywords  = usb, libusb
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: zlib/libpng License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: Jython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=2.7.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
setup_requires =
    setuptools>=34.4.0
install_requires =
    setuptools>=34.4.0
    cffi>=1.10.0
packages =
    libusb
    libusb._platform
    libusb._platform._linux
    libusb._platform._osx
    libusb._platform._windows
zip_safe = True

[options.package_data]
libusb._platform = */*/*.dll, */*/*.so

[options.extras_require]
doc =
    Sphinx>=1.5.3
test =
    unittest2;python_version<'3.0'
    backports.unittest_mock;python_version<'3.0'
    mock;python_version<'3.0'

[sdist]
formats = zip

[bdist_wheel]
universal = 1
